trigesimo segundo cambio

--- a/paginas/blogs/blog-3.html
+++ b/paginas/blogs/blog-3.html
@@ -30,13 +30,13 @@
     <main class="p-blog-title">
         <section class="about-me-page">
             <div class="am-page-content">
-                <p class="min-text">Octubre 12, 2023</p>
+                <p class="min-text">Agosto 21, 2024</p>
                 <h1>Impacto de la inteligencia artificial en el marketing digital</h1>
                 <p>La Inteligencia Artificial (IA) ha transformado el panorama del marketing digital, ofreciendo nuevas formas de interactuar con los clientes, analizar datos y optimizar campañas.</p>
             </div>
         </section>
 
-        <section class="blog1-img1 parallax"></section>
+        <section class="blog3-img1 parallax"></section>
 
         <section class="blog-text-list">
             <div class="bl-text1">
@@ -86,7 +86,7 @@
             </div>
 
             <div class="blog-img">
-                <img src="/imagenes/andrew-neel-ute2XAFQU2I-unsplash.jpg" alt="">
+                <img src="/imagenes/blogs/blog3/blog3-img2.jpg" alt="">
             </div>
         </section>
 
@@ -134,7 +134,7 @@
             </div>
 
             <div class="blog-img">
-                <img src="/imagenes/andrew-neel-ute2XAFQU2I-unsplash.jpg" alt="">
+                <img src="/imagenes/blogs/blog3/blog3-img3.jpg" alt="">
             </div>
         </section>
 
@@ -173,7 +173,7 @@
             </div>
 
             <div class="blog-img">
-                <img src="/imagenes/andrew-neel-ute2XAFQU2I-unsplash.jpg" alt="">
+                <img src="/imagenes/blogs/blog3/blog3-img4.jpg" alt="">
             </div>
         </section>
 
