trigesimo tercer cambio

--- a/index.html
+++ b/index.html
@@ -101,9 +101,9 @@
                     <h3>Transformación digital impactante</h3>
                     <p>"Nova ha transformado nuestra presencia digital de manera impresionante. Su enfoque en el diseño web y marketing digital ha superado nuestras expectativas, logrando resultados significativos para nuestra empresa."</p>
                     <div class="client-info">
-                        <img src="./imagenes/hero/hero-pink.jpg" alt="">
+                        <img src="./imagenes/testimonios/client1.jpg" alt="">
                         <div>
-                            <p>Sofía Martínez</p>
+                            <p>Carolina Vazquéz</p>
                             <p class="company">Visionary Solutions</p>
                         </div>
                     </div>
@@ -113,7 +113,7 @@
                     <h3>Creatividad y resultados excepcionales</h3>    
                     <p>"Trabajar con Nova ha sido una experiencia excelente. Su equipo entendió nuestras necesidades y nos ofreció soluciones creativas que destacaron. El nuevo diseño de nuestro sitio web y la estrategia de marketing digital han llevado nuestra marca a un nivel superior."</p>
                     <div class="client-info">
-                        <img src="./imagenes/hero/hero-pink.jpg" alt="">
+                        <img src="./imagenes/testimonios/client2.jpg" alt="">
                         <div>
                             <p>Valeria Rodríguez</p>
                             <p class="company">NextGen Marketing</p>
@@ -125,7 +125,7 @@
                     <h3>Un trabajo excepcional</h3>    
                     <p>"El trabajo de Nova superó nuestras expectativas. La atención al detalle y la creatividad son incomparables. Desde el diseño hasta la implementación, cada etapa del proceso fue manejada con profesionalismo. ¡Altamente recomendados!"</p>
                     <div class="client-info">
-                        <img src="./imagenes/hero/hero-pink.jpg" alt="">
+                        <img src="./imagenes/testimonios/client3.jpg" alt="">
                         <div>
                             <p>Ana López</p>
                             <p class="company">Creative Solutions</p>
@@ -137,7 +137,7 @@
                     <h3>Estrategia digital que impulsa resultados</h3>
                     <p>"Desde el inicio hasta el final, Nova demostró un alto nivel de profesionalismo y creatividad. Nos ayudaron a desarrollar una estrategia de marketing digital que aumentó nuestra visibilidad en línea y generó más clientes potenciales."</p>
                     <div class="client-info">
-                        <img src="./imagenes/hero/hero-pink.jpg" alt="">
+                        <img src="./imagenes/testimonios/client4.jpg" alt="">
                         <div>
                             <p>Javier Martínez</p>
                             <p class="company">TechForward Inc</p>
@@ -149,7 +149,7 @@
                     <h3>Soluciones creativas que impulsan resultados</h3>
                     <p>"Estamos encantados con los resultados de nuestra colaboración con Nova. Su capacidad para entregar soluciones efectivas y creativas ha impulsado nuestro marketing digital de manera significativa."</p>
                     <div class="client-info">
-                        <img src="./imagenes/hero/hero-pink.jpg" alt="">
+                        <img src="./imagenes/testimonios/client4.jpg" alt="">
                         <div>
                             <p>Luis Fernández</p>
                             <p class="company">Creative Ventures</p>
@@ -161,7 +161,7 @@
                     <h3>Transformación digital con resultados notables</h3>
                     <p>"La colaboración con Nova fue una de las mejores decisiones que hemos tomado. Su equipo diseñó un sitio web impresionante e implementó una estrategia de SEO efectiva que mejoró nuestro posicionamiento. La comunicación durante todo el proceso fue excelente."</p>
                     <div class="client-info">
-                        <img src="./imagenes/hero/hero-pink.jpg" alt="">
+                        <img src="./imagenes/testimonios/client6.jpg" alt="">
                         <div>
                             <p>Laura González</p>
                             <p class="company">Bright Minds Agency</p>
