--- a/paginas/blogs/blog-4.html
+++ b/paginas/blogs/blog-4.html
@@ -233,10 +233,10 @@
                     <p>El futuro del eCommerce está lleno de oportunidades y desafíos. Las tecnologías disruptivas como la inteligencia artificial, la realidad aumentada, el IoT y blockchain están transformando la forma en que compramos y vendemos en línea. Para mantenerse competitivas, las empresas deben adoptar estas innovaciones y adaptarse a las tendencias emergentes. La personalización avanzada, la automatización y la mejora en la experiencia del cliente serán fundamentales para el éxito en el dinámico mundo del eCommerce. Al hacerlo, las empresas no solo mejorarán su eficiencia operativa, sino que también ofrecerán experiencias de compra excepcionales que capturarán la lealtad de los clientes.</p>
                 </div>
                 <div class="client-info">
-                    <img src="/imagenes/5.jpg" alt="">
+                    <img src="/imagenes/hero/hero-pink.jpg" alt="">
                     <div>
-                        <p>Sofía Martínez</p>
-                        <p class="company">Visionary Solutions</p>
+                        <p>Laura Gómez</p>
+                        <p class="company">Especialista en marketing digital | Nova</p>
                     </div>
                 </div>
             </div>
