--- a/paginas/blogs/blog-1.html
+++ b/paginas/blogs/blog-1.html
@@ -163,10 +163,10 @@
                     <p>Mejorar la experiencia del usuario es un proceso continuo que requiere atención constante y ajustes según los resultados y el feedback. Implementa las estrategias mencionadas y utiliza las herramientas adecuadas para asegurarte de que tu sitio web ofrezca la mejor experiencia posible a tus usuarios. Una buena UX no solo aumenta la satisfacción del usuario, sino que también puede mejorar significativamente los resultados de tu negocio.</p>
                 </div>
                 <div class="client-info">
-                    <img src="/imagenes/5.jpg" alt="">
+                    <img src="/imagenes/hero/hero-pink.jpg" alt="">
                     <div>
-                        <p>Sofía Martínez</p>
-                        <p class="company">Visionary Solutions</p>
+                        <p>Carlos Hernández</p>
+                        <p class="company">Desarrollador web | Nova</p>
                     </div>
                 </div>
             </div>
