--- a/paginas/blogs/blog-2.html
+++ b/paginas/blogs/blog-2.html
@@ -276,10 +276,10 @@
                     <p>La Realidad Aumentada ofrece un mundo de posibilidades para desarrollar aplicaciones móviles innovadoras y atractivas. Con una comprensión sólida de sus beneficios, aplicaciones y las herramientas disponibles, puedes empezar a explorar y crear experiencias de RA que transformen la forma en que los usuarios interactúan con el mundo digital y real. Mantente al tanto de las últimas tendencias y avances en la tecnología de RA para asegurar que tus aplicaciones permanezcan relevantes y competitivas en un mercado en constante cambio.</p>
                 </div>
                 <div class="client-info">
-                    <img src="/imagenes/5.jpg" alt="">
+                    <img src="/imagenes/hero/hero-pink.jpg" alt="">
                     <div>
-                        <p>Sofía Martínez</p>
-                        <p class="company">Visionary Solutions</p>
+                        <p>Carlos Hernández</p>
+                        <p class="company">Desarrollador web | Nova</p>
                     </div>
                 </div>
             </div>
