--- a/paginas/blogs/blog-3.html
+++ b/paginas/blogs/blog-3.html
@@ -224,10 +224,10 @@
                     <p>La Inteligencia Artificial está transformando el marketing digital, ofreciendo nuevas formas de personalización, análisis de datos y automatización. Aunque existen desafíos, los beneficios y las oportunidades que ofrece la IA son inmensos. Las marcas que adopten y dominen esta tecnología estarán bien posicionadas para liderar en el competitivo mundo del marketing digital. Mantenerse al tanto de los avances en IA y aprender a implementarla eficazmente será crucial para el éxito continuo en el mercado.</p>
                 </div>
                 <div class="client-info">
-                    <img src="/imagenes/5.jpg" alt="">
+                    <img src="/imagenes/hero/hero-pink.jpg" alt="">
                     <div>
-                        <p>Sofía Martínez</p>
-                        <p class="company">Visionary Solutions</p>
+                        <p>Laura Gómez</p>
+                        <p class="company">Especialista en marketing digital | Nova</p>
                     </div>
                 </div>
             </div>
