--- a/paginas/blogs/blog-5.html
+++ b/paginas/blogs/blog-5.html
@@ -272,10 +272,10 @@
                     <p>El diseño audiovisual es una herramienta poderosa que transforma la manera en que las marcas se comunican y los usuarios interactúan con el contenido digital. La integración efectiva de sonido y video no solo captura la atención, sino que también mejora la experiencia del usuario, fortalece la identidad de la marca y crea conexiones emocionales profundas. Al adoptar las mejores prácticas y utilizar herramientas y tecnologías avanzadas, las marcas pueden crear experiencias digitales inmersivas y memorables que resonarán con su audiencia en el futuro.</p>
                 </div>
                 <div class="client-info">
-                    <img src="/imagenes/5.jpg" alt="">
+                    <img src="/imagenes/hero/hero-pink.jpg" alt="">
                     <div>
                         <p>Sofía Martínez</p>
-                        <p class="company">Visionary Solutions</p>
+                        <p class="company">Diseñadora gráfica | Nova</p>
                     </div>
                 </div>
             </div>
