--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
         </nav>
     </header>
 
-    <main>
+    <main class="main-page">
         <section class="hero hero-pink parallax-text">
             <div class="hero-content">
                 <h1>Transforma tus ideas en experiencias innovadoras</h1>
